force-app/main/default/objects/Employment_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Other_Benefits_Gross_Net__c</fullName>
        <formula>IF(INCLUDES(Net_Components__c, &quot;Other Benefits&quot;), &quot;Net&quot;, &quot;Gross&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Benefits Gross/Net</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Benefits__c</fullName>
        <label>Other Benefits*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Bonus_Payments__c</fullName>
        <label>Other Bonus Payments</label>
        <summarizedField>Pay_Slip__c.Other_Bonus_Amount__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Leave_Taken__c</fullName>
        <label>Other Leave Taken</label>
        <summarizedField>Days_Off__c.Approved_Other_Leave__c</summarizedField>
        <summaryForeignKey>Days_Off__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Part_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part-Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Health_Insurance__c</fullName>
        <label>Partner Health Insurance*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perfomance_Bonus_Achieved__c</fullName>
        <formula>IF(TEXT( Bonus_Criteria__c )=&quot;Student Numbers&quot;, Performance_Bonus_New__c  * Student_Target_Achieved__c ,IF(TEXT( Bonus_Criteria__c )=&quot;Student Numbers and Personal Objectives&quot;, Performance_Bonus_New__c * Student_Target_Achieved__c * Objectives_Target_Achieved__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perfomance Bonus Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Bonus_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Performance Bonus&quot;), Secondary_Currency_Code__c, TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Bonus Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Bonus_New__c</fullName>
        <label>Performance Bonus*</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Bonus_Payments__c</fullName>
        <label>Performance Bonus Payments</label>
        <summarizedField>Pay_Slip__c.Performance_Bonus__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Performance_Bonus__c</fullName>
        <label>Performance Bonus (In Pri. Currency)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position_in_Contract__c</fullName>
        <label>Position in Contract*</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Currency__c</fullName>
        <formula>CASE(
     TEXT(CurrencyIsoCode), 
     &quot;BRL&quot;, &quot;BRL - Brazilian Real&quot;, 
     &quot;CNY&quot;, &quot;CNY - Chinese Yuan&quot;, 
     &quot;EUR&quot;, &quot;EUR - Euro&quot;, 
     &quot;GBP&quot;, &quot;GBP - British Pound&quot;, 
     &quot;MMK&quot;, &quot;MMK - Myanmar Kyat&quot;, 
     &quot;MYR&quot;, &quot;MYR - Malaysian Ringgit&quot;, 
     &quot;PHP&quot;, &quot;PHP - Philippine Peso&quot;, 
     &quot;RUB&quot;, &quot;RUB - Russian Rouble&quot;, 
     &quot;USD&quot;, &quot;USD - U.S. Dollar&quot;, 
     &quot;UZS&quot;, &quot;UZS - Uzbekistan Sum&quot;, 
     &quot;Error&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This should be the currency of the core salary components e.g. &apos;Salary&apos;.</inlineHelpText>
        <label>Primary Currency*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_Period_Number__c</fullName>
        <formula>CASE(TEXT(Months_Probation__c),
          &quot;One Month&quot;, 1,
          &quot;Two Months&quot;, 2,
          &quot;Three Months&quot;, 3,
          &quot;Four Months&quot;, 4,
          &quot;Five Months&quot;, 5,
          &quot;Six Months&quot;, 6,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probation Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relocation_Allowance_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Relocation Allowance&quot;), Secondary_Currency_Code__c, TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relocation Allowance Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relocation_Allowance_Gross_Net__c</fullName>
        <formula>IF(INCLUDES(Net_Components__c, &quot;Relocation Allowance&quot;), &quot;Net&quot;, &quot;Gross&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relocation Allowance Gross/Net</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsbility_Points_Allocated__c</fullName>
        <formula>IF(TEXT(Status__c) = &quot;Active&quot;, Staff_Member__r.Responsibility_POints__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsibility Points Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resulting_Bonus__c</fullName>
        <formula>Performance_Bonus__c * Student_Target_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resulting Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Retention Bonus&quot;), Secondary_Currency_Code__c, TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retention Bonus Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus_Gross_Net__c</fullName>
        <formula>IF(INCLUDES(Net_Components__c, &quot;Retention Bonus&quot;), &quot;Net&quot;, &quot;Gross&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retention Bonus Gross/Net</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus_New__c</fullName>
        <label>Retention Bonus*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus_Payments__c</fullName>
        <label>Retention Bonus Payments</label>
        <summarizedField>Pay_Slip__c.Retention_Bonus__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus__c</fullName>
        <label>Retention Bonus (In Pri. Currency)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Salary&quot;), Secondary_Currency_Code__c,  TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salary Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary_New__c</fullName>
        <label>Salary*</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Payments__c</fullName>
        <label>Total Salary Payments</label>
        <summarizedField>Pay_Slip__c.Salary_Base_Currency__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary (In Pri. Currency)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Staff_Member__r.Owner.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Approver__c</fullName>
        <description>The Second approver for approval processes that include more than one approver</description>
        <label>Second Approver</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Currency_Applies_To__c</fullName>
        <inlineHelpText>Select the components of the employment agreement that the secondary currency applies to</inlineHelpText>
        <label>Secondary Currency Applies To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salary</fullName>
                </value>
                <value>
                    <fullName>Performance Bonus</fullName>
                </value>
                <value>
                    <fullName>Retention Bonus</fullName>
                </value>
                <value>
                    <fullName>Taxes Paid by School</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Travel Allowance</fullName>
                </value>
                <value>
                    <fullName>Relocation Allowance</fullName>
                </value>
                <value>
                    <fullName>Visa Costs</fullName>
                </value>
                <value>
                    <fullName>Other Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Currency_Code__c</fullName>
        <formula>CASE(TEXT(Secondary_Currency__c), 

&quot;BRL - Brazilian Real&quot;, &quot;BRL&quot;, 
&quot;CNY - Chinese Yuan&quot;, &quot;CNY&quot;,
&quot;EUR - Euro&quot;, &quot;EUR&quot;,
&quot;GBP - British Pound&quot;, &quot;GBP&quot;,
&quot;MMK - Myanmar Kyat&quot;, &quot;MMK&quot;,
&quot;MYR - Malaysian Ringgit&quot;, &quot;MYR&quot;,
&quot;PHP - Philippine Peso&quot;, &quot;PHP&quot;,
&quot;RUB - Russian Rouble&quot;, &quot;RUB&quot;,
&quot;USD - U.S. Dollar&quot;, &quot;USD&quot;,
&quot;UZS - Uzbekistan Sum&quot;, &quot;UZS&quot;,

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Currency__c</fullName>
        <inlineHelpText>If applicable, select a secondary currency for the employment agreement. The secondary currency is usually used for non-core salary components that are in a different currency to the primary.</inlineHelpText>
        <label>Secondary Currency*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRL - Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>CNY - Chinese Yuan</fullName>
                </value>
                <value>
                    <fullName>EUR - Euro</fullName>
                </value>
                <value>
                    <fullName>GBP - British Pound</fullName>
                </value>
                <value>
                    <fullName>MMK - Myanmar Kyat</fullName>
                </value>
                <value>
                    <fullName>MYR - Malaysian Ringgit</fullName>
                </value>
                <value>
                    <fullName>PHP - Philippine Peso</fullName>
                </value>
                <value>
                    <fullName>RUB - Russian Rouble</fullName>
                </value>
                <value>
                    <fullName>USD - U.S. Dollar</fullName>
                </value>
                <value>
                    <fullName>UZS - Uzbekistan Sum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sick_Days__c</fullName>
        <label>Sick Days*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_Days_words__c</fullName>
        <formula>IF (TEXT ( Sick_Days__c ) = &quot;1&quot;, &quot;one (1) day&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;2&quot;, &quot;two (2) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;3&quot;, &quot;three (3) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;4&quot;, &quot;four (4) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;5&quot;, &quot;five (5) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;6&quot;, &quot;six (6) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;7&quot;, &quot;seven (7) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;8&quot;, &quot;eight (8) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;9&quot;, &quot;nine (9) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;10&quot;, &quot;ten (10) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;11&quot;, &quot;eleven (11) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;12&quot;, &quot;twelve (12) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;13&quot;, &quot;thirteen (13) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;14&quot;, &quot;fourteen (14) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;15&quot;, &quot;fifteen (15) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;16&quot;, &quot;sixteen (16) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;17&quot;, &quot;seventeen (17) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;18&quot;, &quot;eighteen (18) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;19&quot;, &quot;nineteen (19) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;20&quot;, &quot;twenty (20) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;21&quot;, &quot;twenty one (21) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;22&quot;, &quot;twenty two (22) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;23&quot;, &quot;twenty three (23) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;24&quot;, &quot;twenty four (24) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;25&quot;, &quot;twenty five (25) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;26&quot;, &quot;twenty six (26 days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;27&quot;, &quot;twenty seven (27) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;28&quot;, &quot;twenty eight (28) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;29&quot;, &quot;twenty nine (29) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;30&quot;, &quot;thirty (30) days&quot;,
IF (TEXT ( Sick_Days__c ) = &quot;31&quot;, &quot;thirty one (31) days&quot;,&quot;&quot;)))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sick Days words</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sick_Leave_Taken__c</fullName>
        <label>Sick Leave Taken</label>
        <summarizedField>Days_Off__c.Approved_Sick_Days__c</summarizedField>
        <summaryForeignKey>Days_Off__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Signed_Agreed_Date__c</fullName>
        <label>Signed/Agreed Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member_Campus__c</fullName>
        <formula>TEXT(Staff_Member__r.Campus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member_Name__c</fullName>
        <formula>IF(
   ISBLANK(Staff_Member__r.PersonContact.Full_Name_on_Passport_Official_ID__c),
   Staff_Member__r.FirstName&amp;&quot; &quot;&amp;Staff_Member__r.LastName,
   Staff_Member__r.PersonContact.Full_Name_on_Passport_Official_ID__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <label>Staff Member</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff Member, Staff Member - Group Level</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employment Agreements</relationshipLabel>
        <relationshipName>Salary_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Approvals__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved-Not Signed</fullName>
                </value>
                <value>
                    <fullName>Signed- Not Started</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Not signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Target_Achieved__c</fullName>
        <formula>Target_Students_This_Year__r.Resulting_Multiplier_Copy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tally_Exchange_Rate_Gains_Losses__c</fullName>
        <label>Tally Exchange Rate Gains/Losses</label>
        <summarizedField>Pay_Slip__c.Copy_Exchange_Rate_Losses__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Target_Students_This_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Numbers Table</label>
        <referenceTo>Bonus_Table__c</referenceTo>
        <relationshipLabel>Employment Agreements (Target Students This Year)</relationshipLabel>
        <relationshipName>Employment_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taxes_Paid_by_School_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Taxes Paid by School&quot;), Secondary_Currency_Code__c, TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxes Paid by School Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes_Paid_by_School_New__c</fullName>
        <inlineHelpText>Only to be used when an agreement contains net components, these are taxes that are borne by the school on behalf of the employee thus adding to the cost of employing them. NB. These are not the taxes payable by the employee when a contract is gross!</inlineHelpText>
        <label>Taxes Paid by School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taxes_Paid_by_School__c</fullName>
        <label>Taxes Paid by School (In Pri. Currency)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Days_Per_Week__c</fullName>
        <formula>IF( Part_Time__c =TRUE, TEXT( Days_Per_Week__c ) ,&quot;five (5)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Day Per Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Hours_Per_Day__c</fullName>
        <formula>IF( Part_Time__c =TRUE, TEXT(  Hours_Per_Day__c ) ,&quot;eight (8)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Hours Per Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Bonus_Payments__c</fullName>
        <formula>Performance_Bonus_Payments__c + Retention_Bonus_Payments__c + Other_Bonus_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bonus Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Package__c</fullName>
        <formula>Cost_of_Health_Insurance__c + Cost_of_Housing__c + Cost_of_Other_Benefits__c + Visa_Costs_Amount__c +  Cost_of_Relocation__c  + Salary__c +  Retention_Bonus__c  +  Cost_of_Travel_Allowance__c  + Taxes_Paid_by_School__c +  Cost_of_Responsibility_Points__c +  Performance_Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Package in Primary Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Health_Insurance_Payments__c</fullName>
        <label>Total Health Insurance Payments</label>
        <summarizedField>Pay_Slip__c.Health_Insurance__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Housing_Payment__c</fullName>
        <formula>Total_Housing_Payments__c + Total_Housing_School_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Housing Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Housing_Payments__c</fullName>
        <label>Total Housing Allowance Payments</label>
        <summarizedField>Pay_Slip__c.Housing_Allowance__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Housing_School_Payments__c</fullName>
        <label>Total Housing School Payments</label>
        <summarizedField>Pay_Slip__c.Housing_Cost_Paid_by_School__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Other_Taxes_Paid_by_School__c</fullName>
        <label>Total Other Taxes Paid by School</label>
        <summarizedField>Pay_Slip__c.Other_Taxes_Paid_by_School__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Relocation_Allowance_Payments__c</fullName>
        <label>Total Relocation Allowance Payments</label>
        <summarizedField>Pay_Slip__c.Relocation_Allowance__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Responsibility_Points_Paid__c</fullName>
        <label>Total Responsibility Points Paid</label>
        <summarizedField>Pay_Slip__c.Responsibility_Points__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Social_Security_Payments_by_School__c</fullName>
        <label>Total Social Security Payments by School</label>
        <summarizedField>Pay_Slip__c.Social_Security_Paid_by_School__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Taxes_Paid_by_School__c</fullName>
        <formula>Total_Other_Taxes_Paid_by_School__c + Total_Social_Security_Payments_by_School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Taxes Paid by School</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Travel_Allowance_Payments__c</fullName>
        <label>Total Travel Allowance Payments</label>
        <summarizedField>Pay_Slip__c.Travel_Allowance__c</summarizedField>
        <summaryForeignKey>Pay_Slip__c.Employment_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Travel_Allowance_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Travel Allowance&quot;), Secondary_Currency_Code__c, TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Allowance Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Allowance_Gross_Net__c</fullName>
        <formula>IF(INCLUDES(Net_Components__c, &quot;Travel Allowance&quot;), &quot;Net&quot;, &quot;Gross&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Allowance Gross/Net</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travelling_Dependants__c</fullName>
        <label>Travelling Dependants*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a Partner</fullName>
                </value>
                <value>
                    <fullName>a Partner and 1 Child</fullName>
                </value>
                <value>
                    <fullName>a Partner and 2 Children</fullName>
                </value>
                <value>
                    <fullName>a Partner and 3 Children</fullName>
                </value>
                <value>
                    <fullName>a Partner and 4 Children</fullName>
                </value>
                <value>
                    <fullName>a Partner and 5 Children</fullName>
                </value>
                <value>
                    <fullName>1 Child</fullName>
                </value>
                <value>
                    <fullName>2 Children</fullName>
                </value>
                <value>
                    <fullName>3 Children</fullName>
                </value>
                <value>
                    <fullName>4 Children</fullName>
                </value>
                <value>
                    <fullName>5 Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <description>Used to trigger a time based workflow</description>
        <label>Triggered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                    <default>true</default>
                    <label>Off</label>
                </value>
                <value>
                    <fullName>On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                    <default>true</default>
                    <label>Contract</label>
                </value>
                <value>
                    <fullName>Conditions Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visa_Costs_Amount_New__c</fullName>
        <label>Visa Costs Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visa_Costs_Amount__c</fullName>
        <label>Visa Costs Amount (In Pri. Currency)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Visa_Costs_Currency__c</fullName>
        <formula>IF(INCLUDES(Secondary_Currency_Applies_To__c, &quot;Visa Costs&quot;), Secondary_Currency_Code__c, TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visa Costs Currency</label>
        <type>Text</type>
    </fields>
    <label>Employment Agreement</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Employment Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Agreements</pluralLabel>
    <recordTypes>
        <fullName>Employee_Agreement_LOCKED</fullName>
        <active>true</active>
        <label>Employee Agreement LOCKED</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employee_Agreement_UNLOCKED</fullName>
        <active>true</active>
        <label>Employee Agreement UNLOCKED</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment_Agreement_LOCKED_PRIVATE</fullName>
        <active>true</active>
        <label>Employment Agreement LOCKED PRIVATE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment_Agreement_UNLOCKED_PRIVATE</fullName>
        <active>true</active>
        <label>Employment Agreement UNLOCKED PRIVATE</label>
    </recordTypes>
    <recordTypes>
        <fullName>GROUP_LEVEL</fullName>
        <active>true</active>
        <label>GROUP LEVEL</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_not_Earlier_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date cannot be earlier than the Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fill_Contract_Term</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT(Type__c) =&quot;Contract&quot;, TEXT(Contract_Term__c) =&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Contract_Term__c</errorDisplayField>
        <errorMessage>You must choose a contract Term</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Academic_Year</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEN( Academic_Year__c ) = 7, FALSE, TRUE)</errorConditionFormula>
        <errorDisplayField>Academic_Year__c</errorDisplayField>
        <errorMessage>Format for Academic Year should be YYYY/YY. For example 2012/13</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Probation_Period_inputed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Months_Probation__c) =&quot;None&quot;, TEXT(Type__c )=&quot;Contract&quot;)</errorConditionFormula>
        <errorDisplayField>Months_Probation__c</errorDisplayField>
        <errorMessage>You must indicate a probation period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    $User.Id != &quot;0056F000008tfhZ&quot;, 
    ISBLANK(End_Date__c), 
    OR(
       TEXT(Contract_Term__c) = &quot;Less than a year&quot;,
       TEXT(Contract_Term__c)= &quot;1 Year&quot;,
       TEXT(Contract_Term__c) = &quot;2 Years&quot;,
       TEXT(Contract_Term__c) = &quot;3 Years&quot;
       )
    )</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Fixed Term Contracts must have an End Date</errorMessage>
    </validationRules>
</CustomObject>